Fix dupe vote, also group ballots

--- a/app/views/vote/index.html.erb
+++ b/app/views/vote/index.html.erb
@@ -1,5 +1,5 @@
 <h1>VLT Election</h1>
-<p>Thank you for voting in the VLT election.</p>
+<p>Hello, <%= @voter.name %>. Thank you for voting in the VLT election.</p>
 <p>Please rank the candidates in order of your preference. You do not have to rank every candidate.</p>
 
 <% if flash[:alert] %>
